# nordeacsv

./: .gitignore  LICENSE  PLUSGIROKONTO - TEST FILE 001.csv  README.md  SUCCESS - Copy.csv  SUCCESS.csv  nordea.csv  nordeacsv.spec  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: learn-github-actions.yml  nordeacsv-actions.yml
app/: cmd_prompt_actions.py  nordeacsv.py
local_nordeacsv.egg-info/: PKG-INFO  SOURCES.txt
resources/: header.txt
src/: nordeacsv.py
src/actions/: cmd_prompt_actions.py  csv_data_frame.py  csv_file_operator.py  enum_file.py  output.py
src/nordeacsv/: nordeacsv.py
src/nordeacsv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
stackoverflow/: stackoverflow.py
test_nordeacsv/: test_cmd_prompt_actions.py  test_csvdataframe.py  test_csvfileoperator.py
tests/: cash_flow.csv  test_cmd_prompt_actions.py  test_csvdataframe.py  test_csvfileoperator.py
tests/resources/: header.txt  test.csv
