[metadata]
name = nordeacsv
version = 0.1.0
author = Olof Thornell
author_email = olof.thornell@gmail.com
description = transform to new csv format
long description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages  = find:

[options.packages.find]
where = src
